fix(@material-components-web): overflow inside of dialog (#24)

--- a/src/styles/balm-ui/components/dialog/_ui-dialog.scss
+++ b/src/styles/balm-ui/components/dialog/_ui-dialog.scss
@@ -2,8 +2,10 @@
 
 .mdc-dialog__content .mdc-select__menu {
   // fix(ui): `ui-select` inside of dialog (#24)
-  top: select-variables.$height !important;
-  bottom: auto !important;
+  &:not(.mdc-menu-surface--fixed) {
+    top: select-variables.$height !important;
+    bottom: auto !important;
+  }
 
   .mdc-list:first-child:last-child {
     padding: 8px 0;
